--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     </queries>
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="Fanpay"
+        android:label="Fraxpay"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
